# biocaml

./: BIOCAML.opam  README.md  dune-project
_build/: .db  .digest-db  log
_build/default/: BIOCAML.dune-package  BIOCAML.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: bio_cli.ml  bio_crd.ml  bio_fit.ml  bio_pdb.ml  bio_select.ml  bio_util.ml  bio_xyz.ml  biocaml.cma  biocaml.cmxa  biocaml.cmxs  biocaml_owl.cma  biocaml_owl.cmxa  biocaml_owl.cmxs  biocaml_owl.ml-gen  crd_parse.ml  ions_find.ml  pdb_parse.ml
_build/default/lib/.biocaml.objs/: bio_analysis.impl.all-deps  bio_analysis.impl.d  bio_cli.impl.all-deps  bio_cli.impl.d  bio_crd.impl.d  bio_dcd.impl.all-deps  bio_dcd.impl.d  bio_fit.impl.d  bio_geom.impl.d  bio_pca.impl.d  bio_pdb.impl.d  bio_select.impl.all-deps  bio_select.impl.d  bio_solvate.impl.all-deps  bio_solvate.impl.d  bio_util.impl.d  bio_xyz.impl.all-deps  bio_xyz.impl.d  crd_parse.impl.all-deps  crd_parse.impl.d  ions_find.impl.d  makecrd.impl.all-deps  makecrd.impl.d  pdb_parse.impl.d
_build/default/lib/.biocaml.objs/byte/: bio_analysis.cmi  bio_analysis.cmo  bio_analysis.cmt  (+45 more)
_build/default/lib/.biocaml_owl.objs/: biocaml_owl__Bio_df_owl.impl.d
_build/default/lib/.merlin-conf/: lib-biocaml  lib-biocaml_owl
_build/default/test/.merlin-conf/: exe-test_BIOCAML
debug_objs/: coords.xyz
lib/: bio_analysis.ml  bio_crd.ml  bio_dcd.ml  bio_df_owl.ml  bio_fit.ml  bio_geom.ml  bio_pca.ml  bio_pdb.ml  bio_solvate.ml  bio_util.ml  check_bonds.ml  dune  fix_inter.ml  makecrd.ml
test/: dune  test_BIOCAML.ml
(+30 files in other folders)
